force-app/main/default/objects/Student_Association__c.object
<CustomObject>
    <description>List of student associations that they can subscribe to.

Deprecation candatite. Object not populated. 

CampusM (my.monash) may reference it.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audience_Location__c</fullName>
        <label>Audience Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Postgraduates</fullName>
                </value>
                <value>
                    <fullName>Berwick</fullName>
                </value>
                <value>
                    <fullName>Caulfield</fullName>
                </value>
                <value>
                    <fullName>Clayton</fullName>
                </value>
                <value>
                    <fullName>Parkville</fullName>
                </value>
                <value>
                    <fullName>Peninsula</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_URL__c</fullName>
        <label>Site URL</label>
        <type>Url</type>
    </fields>
    <label>Student Association</label>
    <nameField>
        <label>Association Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>